[tool.pdm]

[project]
name = "for-nursery"
version = "0.1"
description = ""
authors = []
dependencies = [
    "Cython>=0.29.34",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlmodel>=0.0.8",
    "strawberry-graphql[fastapi]>=0.194.4",
    "gunicorn>=20.1.0",
    "psycopg[binary]>=3.1.9",
    "psycopg2-binary>=2.9.6",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit[toml]>=1.7.5",
    "pyproject-flake8>=6.0.0.post1",
    "mdformat-gfm>=0.3.5",
]

test = [
    "Faker>=18.13.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload --port 8080"
server = "gunicorn src.main:app -w 4 -k uvicorn.workers.UvicornWorker"
lint = "flake8 src"
isort = "isort ."
black = "black src"
mdformat = "mdformat ."
format = {composite = ["isort", "black", "mdformat"]}
seed = "src/common/utils/seed.py"
